# curses_tracker

./: .gitignore  Makefile  Makefile.am  README.md  audio_sdl.cpp  audio_sdl.hpp  check_errno.cpp  check_errno.hpp  configure.ac  curve_db.cpp  curve_db.hpp  curve_slot.hpp  curves.hpp  event.cpp  event.hpp  git_pre_commits_notes_7-31-23_0055.txt  git_pre_commits_notes_8-01-23_1942.txt  main.cpp  note.cpp  synth_method.hpp  track.cpp  track.hpp  ui_curses.cpp  ui_curses.hpp
docs/: a_plan_for_combining_the_module_proof_of_concepts.md  git_pre_commits_notes_7-31-23_0055.txt  git_pre_commits_notes_8-01-23_1942.txt  how_08d8c60a_works.md  sketching_the_audio_vm.md
include/: audio_sdl.hpp  curses_curve_view.hpp  curve.hpp  curve_db.hpp  curve_slot.hpp  curves.hpp  db.hpp  defs.hpp  delay.hpp  event.hpp  exceptions.hpp  instrument.hpp  latch.hpp  note.hpp  param.hpp  pulse_delay.hpp  pulse_train.hpp  sdl_util.hpp  sequencer.hpp  sig_flags.hpp  stopwatch.hpp  synth.hpp  synth_method.hpp  toggle.hpp  track.hpp  ui_curses.hpp  wavetable.hpp
src/: audio_sdl.cpp  chk_errno.cpp  curses_curve_view.cpp  curve.cpp  curve_db.cpp  curves.cpp  db.cpp  delay.cpp  exceptions.cpp  main.cpp  note.cpp  pulse_delay.cpp  pulse_train.cpp  sdl_util.cpp  sequencer.cpp  stopwatch.cpp  synth.cpp  toggle.cpp  ui_curses.cpp  wavetable.cpp
test/: amp.cpp  pulse_delay.cpp  pulse_train.cpp  toggle.cpp  transistor.cpp
